# AI-Engineer

./: .gitignore  README.md
FunctionCalling/: README.md  agent_service.py  main.py  pyproject.toml  todo_service.py
LangChain/: README.md  agent.py  collect_information_prompt.md  load_prompt.py  main.py  middlewares.py  print_messages.py  pyproject.toml  ui_components.py
PromptEngineering/: README.md  agent_calling.py  main.py  pyproject.toml
PromptEngineering/prompts/: cli-commands.md
RagWithLlamaindex/project/: README.md  build_rag.py  extract_data.py  indexer.py  main.py  main2.py  pyproject.toml  structured_knowledge.json  workflow_graph.html
RagWithLlamaindex/project/data/: PROJECT_STRUCTURE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
RagWithLlamaindex/project/data/.github/agents/: refactoring.agent.md  testing.agent.md
RagWithLlamaindex/project/data/.github/instructions/: database.instructions.md
RagWithLlamaindex/project/data/.github/skills/task_manager/: README.md
RagWithLlamaindex/project/prompts/: json_qa.md  rag.md  refine.md
RagWithLlamaindex/project/storage/: default__vector_store.json  docstore.json  index_store.json
project/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  DOCS_INDEX.md  FEATURE_GUIDE.md  INDEX.md  PROJECT_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  WORKFLOWS.md  copilot-instructions.md  tasks.db
project/.gemini/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
project/.github/instructions/: app.instructions.md  main.instructions.md  task.instructions.md
project/.github/prompts/: css-guidelines.prompt.md  query-tasks.prompt.md  quick-add-task.prompt.md
project/.github/skills/task_manager/: SKILL.md
project/task_manager/: __init__.py  app.py  database.py  main.py  task.py  tasks.db
project/task_manager/static/: app.js  style.css
project/task_manager/templates/: index.html  tasks_list.html
