[project]
name = "github-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.8",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "netfree-unstrict-ssl>=0.1.1",
    "rich>=15.0.0",
    "streamlit>=1.30.0",
    "tavily-python>=0.7.25",
]
